@@ -111,7 +111,7 @@ public class FractionsIntroSimSharing {
         autoSpin,
         soundEnabled, timerEnabled, isCorrect, points, shapeType, targets, correct, leftScaleNumerator, leftScaleDenominator, rightScaleNumerator, rightScaleDenominator,
         leftScaleRepresentation, rightScaleRepresentation,
-        hit, source, levelID, target, targetIndex, fractions, divisions
+        hit, source, levelID, target, targetIndex, fractions, constituents, divisions
     }
 
     public enum SystemComponents implements ISystemComponent {
